--- a/index.html
+++ b/index.html
@@ -38,34 +38,34 @@
 	    <div class="row">
 	      <section class="column">
 	        <h2 class="subtitle">Single-origin</h2>
-	        <p>We have built partnerships with small farms around the world to hand-select beans at the peak of season. We then carefully roast in <a href="/batch-size.html">small batches</a> to maximize their potential.</p>
+	        <p>We have built partnerships with small farms around the world to hand-select beans at the peak of season. We then carefully roast in <a href="">small batches</a> to maximize their potential.</p>
 	        <hr>
 	      </section>
 	      <section class="column">
 	        <h2 class="subtitle">Blends</h2>
-	        <p>Our tasters have put together a selection of carefully balanced blends. Our famous <a href="/house-blend.html">house blend</a> is available year round.</p>
+	        <p>Our tasters have put together a selection of carefully balanced blends. Our famous <a href="">house blend</a> is available year round.</p>
 	        <hr>
 	      </section>
 	      <section class="column">
 	        <h2 class="subtitle">Brewing Equipment</h2>
-	        <p>We offer our favorite kettles, French presses, and pour-over cones. Come to one of our <a href="/classes.html">brewing classes</a> to learn how to brew the perfect pour-over cup.</p>
+	        <p>We offer our favorite kettles, French presses, and pour-over cones. Come to one of our <a href="">brewing classes</a> to learn how to brew the perfect pour-over cup.</p>
 	        <hr>
 	      </section>
 	    </div>
 	    <div class="row">
 	    	<section class="column">
 	        <h2 class="subtitle">Brewing Equipment</h2>
-	        <p>We offer our favorite kettles, French presses, and pour-over cones. Come to one of our <a href="/classes.html">brewing classes</a> to learn how to brew the perfect pour-over cup.</p>
+	        <p>We offer our favorite kettles, French presses, and pour-over cones. Come to one of our <a href="">brewing classes</a> to learn how to brew the perfect pour-over cup.</p>
 	        <hr>
 	      </section>
 	      <section class="column">
 	        <h2 class="subtitle">Single-origin</h2>
-	        <p>We have built partnerships with small farms around the world to hand-select beans at the peak of season. We then carefully roast in <a href="/batch-size.html">small batches</a> to maximize their potential.</p>
+	        <p>We have built partnerships with small farms around the world to hand-select beans at the peak of season. We then carefully roast in <a href="">small batches</a> to maximize their potential.</p>
 	        <hr>
 	      </section>
 	      <section class="column">
 	        <h2 class="subtitle">Blends</h2>
-	        <p>Our tasters have put together a selection of carefully balanced blends. Our famous <a href="/house-blend.html">house blend</a> is available year round.</p>
+	        <p>Our tasters have put together a selection of carefully balanced blends. Our famous <a href="">house blend</a> is available year round.</p>
 	        <hr>
 	      </section>
 	    </div>
